fix: adapt for JDK 11